# snostr

./: Makefile  README.md  pyproject.toml  requirements.txt
snostr/: cli.py  config.py  manager.py
tests/: test_mgr.py
